# bulk_transcribe_youtube_videos_from_playlist

./: .gitignore  README.md  pyproject.toml  transcribe.py
